I added a word cloud

--- a/config/locales/candidate_results.en.yml
+++ b/config/locales/candidate_results.en.yml
@@ -29,4 +29,5 @@ en:
         words_found: Concepts identified by the class
       worksheet: Worksheet results
       performance: Your performance
+      word_cloud: Word cloud
 
