--- a/config/locales/assignment.en.yml
+++ b/config/locales/assignment.en.yml
@@ -56,6 +56,11 @@ en:
     progress:
       progress_tab_lbl: Progress
       in_progress_msg: Work in progress
+    visualization:
+      label: Chart type
+      stacked_area: Stacked Area
+      layered_area: Layered Area
+      lines: Line Chart
     create_success: Assignment was created successfully!
     destroy_success: Assignment was destroyed successfully!
     update_success: Assignment was updated successfully!
