--- a/config/locales/intro.es.yml
+++ b/config/locales/intro.es.yml
@@ -4,7 +4,7 @@ en:
         welcome: Bienvenidos
         about: Sobre nosotros
         why: Porque CoLab?
-        research: Investigación
+        research: Investigacion
         student: Estudiante?
         instructor: Profesor?
     titles:
