--- a/config/locales/intro.es.yml
+++ b/config/locales/intro.es.yml
@@ -33,10 +33,10 @@ en:
                 mientras los demas hacen el trabajo
             five_one: Que harias en estas situaciones?     
             five_two: No esperes hasta el fin del semestre para informarle a tu profesor de lo que ha pasado
-            six_one: What if there was a way for your professor to help before things got out of hand? 
-            six_two: Now there is!
+            six_one: Y si hubiera una forma de que tu profesor te pueda ayudar? 
+            six_two: Ahora lo hay!
             seven_one: 
-                title: CoLab.online can help!
+                title: CoLab.online te puede ayduar!
                 check-ins: Weekly self- and peer-assessment check-ins
                 growth: Growth focused (not judgment)
                 visualizations: Visualizations
