--- a/config/locales/intro.es.yml
+++ b/config/locales/intro.es.yml
@@ -45,8 +45,8 @@ en:
                 simulations: Experiencia de equipo simulada
                 iterative_assignments: Tareas itererativas
             seven_two:
-                title: Are you a...
-                student: Student?
+                title: Eres un...
+                student: Estudiante?
                 instructor: Instructor?
                 
     images:
