--- a/config/locales/intro.es.yml
+++ b/config/locales/intro.es.yml
@@ -10,7 +10,7 @@ en:
     titles:
         about: ¿Quién está detrás de CoLab?
         why: ¿Cómo puede ayudarle CoLab?
-        research: The research behind CoLab
+        research: La investigación detrás de CoLab
         student: Funciones de CoLab para estudiantes
         instructor: Funciones de CoLab para instructores
     why_slides:
@@ -37,7 +37,7 @@ en:
             six_two: Ahora lo hay!
             seven_one: 
                 title: CoLab.online te puede ayduar!
-                check-ins: Evaluacion de si mismo y del grupo
+                check-ins: controles semanales de autoevaluación y evaluación de pares
                 growth: Enfoque en desarollo sin juzgar
                 visualizations: Visualizaciónes
                 diversity: Composición del grupo centrada en la diversidad
