--- a/config/locales/intro.es.yml
+++ b/config/locales/intro.es.yml
@@ -37,7 +37,7 @@ en:
             six_two: Ahora lo hay!
             seven_one: 
                 title: CoLab.online te puede ayduar!
-                check-ins: controles semanales de autoevaluación y evaluación de pares
+                check-ins: Controles semanales de autoevaluación y evaluación de pares
                 growth: Enfoque en desarollo sin juzgar
                 visualizations: Visualizaciónes
                 diversity: Composición del grupo centrada en la diversidad
