--- a/config/locales/rubric.en.yml
+++ b/config/locales/rubric.en.yml
@@ -2,6 +2,7 @@ en:
   rubrics:
     index:
       title: List of Rubrics
+      empty: No rubrics found
     edit:
       title: Edit Rubric
       deactivate: Deactivate Rubric
@@ -20,7 +21,9 @@ en:
     destroy_success: Rubric was destroyed successfully!
     update_success: Rubric was updated successfully!
     publish_success: Rubric was published successfully!
+    publish_no_permission: You can only publish your own rubrics.
     activate_success: Rubric was activated
+    activate_no_permission: You can only activate your own rubrics.
     copy_success: Rubric was copied successfully!
     deactivate_success: Rubric was deactivated
     back: Back to the list of rubrics
