--- a/config/locales/assignment.es.yml
+++ b/config/locales/assignment.es.yml
@@ -44,43 +44,43 @@ es:
       score: Puntuación
       id: Identificación de envío
       user: Enviado por
-      submitted: Submission Date
-      withdrawn: Withdrawn Date
-      submitter: Submitted by
-      submit_revision_btn: Submit revision for grading
-      draft_revision_btn: Save revision for further editing
-      copy_submission_btn: Make a copy of this revision
-      withdraw_btn: Withdraw revision
-      new_btn: New response
-      response_tab_lbl: Responses
+      submitted: Fecha de entrega
+      withdrawn: Fecha de retiro
+      submitter: Enviado por
+      submit_revision_btn: Enviar revisión para calificar
+      draft_revision_btn: Guardar revisión para edición posterior
+      copy_submission_btn: Hacer una copia de esta revisión
+      withdraw_btn: Retirar revisión
+      new_btn: Retirar revisión
+      response_tab_lbl: Respuestas
     progress:
-      progress_tab_lbl: Progress
-      in_progress_msg: Work in progress
+      progress_tab_lbl: Progreso
+      in_progress_msg: Trabajo en progreso
     visualization:
-      label: Chart type
-      stacked_area: Stacked Area
+      label: Tipo de gráfico
+      stacked_area: Área en capas
       layered_area: Layered Area
-      lines: Line Chart
-    create_success: Assignment was created successfully!
-    destroy_success: Assignment was destroyed successfully!
-    update_success: Assignment was updated successfully!
-    back: Back to the list of assignments
-    name: Assignment Name
-    open_date: Start Date
-    close_date: Close Date
-    description: Assignment Description
-    active: Is Active?
-    version: Version
+      lines: Gráfico lineal
+    create_success: ¡La tarea se creó exitosamente!
+    destroy_success: ¡La tarea fue destruida exitosamente!
+    update_success: ¡La tarea se actualizó exitosamente!
+    back: Volver a la lista de tareas
+    name: Nombre de la Tarea
+    open_date: Fecha de inicio
+    close_date: Fecha de cierre
+    description: Descripción de la tarea
+    active: ¿Está activo? 
+    version: Versión
     error:
-      submission_type: At least one submission type must be selected
+      submission_type: Se debe seleccionar al menos un tipo de envío
       create_failed: >
-        Unable to create the new assignment. Please resolve the errors
-        below and try again.
+        No se ha podido crear la nueva tarea. Por favor resuelva los errores que se indican a
+        continuación e inténtelo de nuevo.
       update_failed: >
-        Unable to save assignment. Please resolve the errors below
-        and try again.
+        No se ha podido guardar la tarea. Por favor resuelva los errores a continuación
+        e inténtelo de nuevo.
       group_required: >
-        To enable groups, you must also select the projct from which to
-        pull them (the groups).
-      no_update_error: Successfully saved the assignment.
-      no_create_error: Successfully created the assignment.
+        Para habilitar los grupos, también debe seleccionar el proyecto de cual
+        extraerlos (the groups).
+      no_update_error: La tarea se ha guardado exitosamente.
+      no_create_error: La tarea se ha creado correctamente.
