--- a/config/locales/candidate_results.es.yml
+++ b/config/locales/candidate_results.es.yml
@@ -10,28 +10,28 @@ en:
     save_lnk: Guardar
     save:
       success: Tu tablero ha sido guardado
-      demo_success: "DEMO: Your board would have been saved"
-      failure: Save failed. Please try again or contact support
-    gen_board_msg: the board you generated
-    download_board_lnk: Download your Bingo Board
-    play_msg: and play along in class!
-    no_data_list_item: no data
-    no_game_msg: no game
-    performance_lbl: Performance
-    topic_lbl: Topic
-    description_lbl: Description
-    no_worksheet_msg: No worksheet
+      demo_success: "DEMO: Tu tablero se habría guardado"
+      failure: Error al guardar. Vuelva a intentarlo o póngase en contacto con el servicio de asistencia
+    gen_board_msg: el tablero que generaste
+    download_board_lnk: Descarga tu Tablero de Bingo
+    play_msg: ¡y sigue el juego en Clase!
+    no_data_list_item: sin datos
+    no_game_msg: sin juego
+    performance_lbl: Rendimiento
+    topic_lbl: Tema
+    description_lbl: Descripción
+    no_worksheet_msg: Sin hoja de trabajo 
     tabs:
       builder:
-        builder_lbl: Bingo game builder
+        builder_lbl: Constructor de juegos de Bingo
         print_step: >
-          Print and complete this Practice Bingo Board then turn it in
-          before class begins.
+          Imprime y completa este Bingo de Prácticas y entrégalo
+          antes de que empiece la clase.
         regenerate: >
-          (Re)Generate your playable board until you get one you like
-          and then...
-        words_found: Concepts identified by the class
-      worksheet: Worksheet results
-      performance: Your performance
-      word_cloud: Word cloud
+          (Re)Genera tu tablero jugable hasta que consigas un me gusta
+          y luego...
+        words_found: Conceptos identificados por la clase
+      worksheet: Resultados de la hoja de trabajo
+      performance: Tu rendimiento
+      word_cloud: Nube de palabras
 
