--- a/config/locales/critique.es.yml
+++ b/config/locales/critique.es.yml
@@ -1,37 +1,37 @@
 en:
   critiques:
-    critique_title: Critiques
+    critique_title: Críticas
     error:
-      not_loaded: No submission loaded
+      not_loaded: No se ha cargado ningún envío
       feedback_required: >
-        Feedback is required for anything less than a perfect
-        score.
-    submissions_title: Submissions
-    submitted: Assignment submission
-    submitted_text: Submitted text
-    submitted_link: Submitted link
-    submission_list_hidden: Click here to see the submissions list
-    no_text: No text entered
-    feedback: Overall feedback
-    calculated_score_lbl: Calculated score
-    override_option_lbl: Override the score?
-    override_score_lbl: Set score
-    clear_override_btn: Clear overridden score
-    history: Previous submissions and feedback
+        Si la puntuación no es perfecta, es necesario enviar
+        un comentario.
+    submissions_title: Entregas
+    submitted: Entrega de trabajo
+    submitted_text: Texto enviado
+    submitted_link: Enlace enviado
+    submission_list_hidden: Haga clic aquí para ver la lista de presentaciones
+    no_text: No se ingresó ningún texto
+    feedback: Comentarios generales
+    calculated_score_lbl: Puntuación calculada
+    override_option_lbl: ¿Anular puntuación?
+    override_score_lbl: Establecer puntuación
+    clear_override_btn: Borrar puntuación anulada
+    history: Envíos y comentarios anteriores
     rubric:
-      name: Name
-      version: Version
-      minimum: Minimum requirements not met.
-      criteria_feedback: Criteria feedback
-    save_btn: Save feedback
-    save_success_msg: Successfully saved your feedback
-    save_fail_msg: Your feedback failed to save
+      name: Nombre
+      version: Versión
+      minimum: Requisitos mínimos no cumplidos.
+      criteria_feedback: Comentarios sobre los criterios
+    save_btn: Guardar comentarios
+    save_success_msg: Tus comentarios se guardaron correctamente
+    save_fail_msg: Tus comentarios no se pudieron guardar.
     submissions:
-      id: Submission id
-      score: Score
-      calculated_score: Calculated score
-      submitted: Submission date
-      withdrawn: Withdrawn date
+      id: Identificación de envío
+      score: Puntuación
+      calculated_score: Puntuación calculada
+      submitted: Fecha de entrega
+      withdrawn: Fecha de retiro
       not_withdrawn: --
-      submitter: Submitted by
+      submitter: Entregado por
       score_na: --
