--- a/config/locales/school.es.yml
+++ b/config/locales/school.es.yml
@@ -1,27 +1,27 @@
-en:
+es:
   schools:
     index:
-      title: List of Schools
-      name_lbl: Name
-      description_lbl: Description
-      courses_lbl: Courses
-      students_lbl: Student count
-      instructor_lbl: Instructor count
-      project_lbl: Project count
-      experience_lbl: Experience count
-      terms_list_lbl: Terms lists
+      title: Lista de escuelas
+      name_lbl: Nombre
+      description_lbl: Descripción
+      courses_lbl: Cursos
+      students_lbl: Conteo de estudiantes
+      instructor_lbl: Conteo de instructores
+      project_lbl: Conteo de proyectos
+      experience_lbl: Conteo de experiencias
+      terms_list_lbl: Lista de términos
 
     edit:
-      title: Edit School
+      title: Editar escuela
     show:
-      title: School Details
-      edit_string: Edit school details
+      title: Detalles de la escuela
+      edit_string: Editar detalles de la escuela
     new:
-      title: New School
-    create_success: School was created successfully!
-    destroy_success: School was destroyed successfully!
-    update_success: School was updated successfully!
-    courses: School Courses
-    no_courses: No courses.
-    back: Back to the list of schools
-    time_zone: Time Zone
+      title: Nueva escuela
+    create_success: ¡La escuela fue creada exitosamente!
+    destroy_success: ¡La escuela fue eliminada exitosamente!
+    update_success: ¡La escuela fue actualizada exitosamente
+    courses: Cursos de la escuela
+    no_courses: No hay cursos.
+    back: Volver a la lista de escuelas
+    time_zone: Zona horaria
