--- a/config/locales/submissions.en.yml
+++ b/config/locales/submissions.en.yml
@@ -1,7 +1,7 @@
 en:
   submissions:
     error:
-      nothing_submitted: No assignment present
+      nothing_submitted: No hay tarea presente
       withdraw_requires_submit: >
         You cannot withdraw an assignment that has not actually been
         submitted.
