--- a/config/locales/submissions.es.yml
+++ b/config/locales/submissions.es.yml
@@ -3,15 +3,15 @@ en:
     error:
       nothing_submitted: No assignment present
       withdraw_requires_submit: >
-        You cannot withdraw an assignment that has not actually been
-        submitted.
+         No puedes retirar una tarea que no ha sido realmente
+        entregada.
       no_changes_on_withdrawal: >
-        You cannot make changes when withdrawing an assignment.
-      no_update_error: Successfully saved the submission.
-      no_create_error: Successfully created the submission.
+        No puedes hacer cambios al retirar una tarea.
+      no_update_error: La entrega se guardó con éxito
+      no_create_error: La entrega se creó con éxito.
       no_changes_once_submitted: >
-        Once an assignment has been submitted, it cannot be modified.
-        You must create a new submission.
+        Una vez que se ha entregado una tarea, no se puede modificar.
+        Debes crear una nueva entrega.
       update_failed: >
-        Unable to save assignment. Please resolve the errors below
-        and try again.
+        No se pudo guardar la tarea. Por favor, resuelve los errores a continuación
+        y vuelve a intentarlo.
