--- a/config/locales/profiles.es.yml
+++ b/config/locales/profiles.es.yml
@@ -1,79 +1,79 @@
-en:
+es:
   profiles:
     activities:
-      name: Activity
-      type: Type
-      course_name: Course
-      course_number: Course number
-    first_name: First name
-    last_name: Last name
-    edit_profile: Edit your profile
+      name: Actividad
+      type: Tipo
+      course_name: Curso
+      course_number: Número del curso
+    first_name: Nombre
+    last_name: Apellido
+    edit_profile: Edita tu perfil
     tabs:
-      details: Details
-      courses: My Courses
-      history: History
-      research: Research Participation
-    cancel: Cancel
-    email_settings: Email settings
+      details: Detalles
+      courses: Mis Cursos
+      history: Hisorial
+      research: Participación en la investigación
+    cancel: Cancelar
+    email_settings: Configuración del correo electrónico
     emails:
-      email_lbl: Email address
-      registered_col: Registered Emails
-      primary_col: Primary
-      set_primary: Set as primary?
-      confirmed_col: Confirmed
-      remove_btn: Remove?
-      add_btn: Add Email!
-      add_dlg_title: Add email
-      add_dlg: Add a new email address
-      none_yet: No emails loaded.
-      remove_tltp: Remove this address
-    none_option: None selected
+      email_lbl: Correo electrónico
+      registered_col: Correos electrónicos registrados
+      primary_col: Principal
+      set_primary: ¿Establecer como principal? 
+      confirmed_col: Confirmado
+      remove_btn: ¿Eliminar?
+      add_btn: ¡Agregar correo electrónico!
+      add_dlg_title: Agregar correo electrónico
+      add_dlg: Agregar un nuevo correo electrónico
+      none_yet: No hay correos electrónicos cargados
+      remove_tltp: Eliminar esta dirección
+    none_option: No se ha seleccionado ninguno
     course_status:
-      name: Name
-      number: Number
-      bingo: Bingo! progress
-      assessment: Assessment progress
-      experience: Experience progress
+      name: Nombre
+      number: Número
+      bingo: ¡Bingo! progreso
+      assessment: Progreso de la evaluación
+      experience: Progreso de la experiencia
     consent:
-      name: Study title
-      status: Study status
-      accept_status: Accepted?
-      active: Active
-      expired: Inactive (expired)
-      inactive: Inactive
-      accepted: Accepted
-      declined: Declined
-      action: Action
+      name: Título del estudio
+      status: Estado del estudio
+      accept_status: ¿Aceptado?
+      active: Activo
+      expired: Inactivo (expired)
+      inactive: Inactivo
+      accepted: Aceptado
+      declined: Rechazado
+      action: Acción
     password_change: >
-      Want to change your password? Click here and we'll email
-      instructions.
+      ¿Quieres cambiar tu contraseña? Haga clic aquí y le enviaremos instrucciones por
+      correo electrónico.
     display_settings:
-      prompt: Display settings
-      ui_theme: What UI theme would you like to use?
-      language: What language would you like to use for CoLab?
-      time_zone: What time zone are you in?
-      anonymize: Anonymize names?
+      prompt: Configuración de pantalla
+      ui_theme: ¿Qué tema de interfaz de usuario te gustaría usar?
+      language: ¿Qué idioma le gustaría utilizar para CoLab?
+      time_zone: ¿En qué zona horaria se encuentra?
+      anonymize: ¿Nombres anónimos?
     demographics: 
       prompt: >
-        Tell us about yourself, {{first_name}} (optional)
-      date_prompt: Enter date
-      time_zone: Time zone
-      school: What school do you currently attend?
-      major: What are you studying?
-      start_school: When did you begin your studies?
-      born: When were you born?
-      gender: What is your gender?
-      home_language: What language do you speak at home?
-      home_town: Where do you call home?
-      home_country: What country?
-      home_state: What state?
+        Cuéntanos acerca de tí, {{first_name}} (optional)
+      date_prompt: Introduce la fecha
+      time_zone: Zona horaria
+      school: ¿A qué escuela asiste actualmente?
+      major: ¿Qué está estudiando?
+      start_school: ¿Cuándo empezó a estudiar?
+      born: ¿Cuándo nació?
+      gender: ¿Cuál es su género?
+      home_language: ¿Qué idioma habla en casa?
+      home_town: ¿A qué lugar llama hogar?
+      home_country: ¿Qué país?
+      home_state: ¿Qué estado?
       impairments:
         prompt: >
-          Do you have any impairments which alter your
-          perspective?
+          ¿Tiene algún impedimento que altere su 
+          perspectiva?
         visual: Visual
-        auditory: Auditory
-        cognitive: Cognitive
+        auditory: Auditivo
+        cognitive: Cognitiva
         motor: Motor
-        other: Other
+        other: Otra
       
